content overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+html {
+  overflow-x: hidden;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -40,15 +53,6 @@ nav .nav-links li a {
 
 .nav-links .logout {
   color: #d7bdca;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .cards {
